<resources>
    <string name="app_name">ShareNest</string>
</resources>
